lab1/Test/L1-A-3-7.output
Error Type B at Line 2
Error Type A at Line 3
Error Type A at Line 3
Error Type A at Line 5
Error Type B at Line 6
Error Type B at Line 7
Error Type A at Line 15
Error Type A at Line 17
Error Type B at Line 20
