lab1/Test/L1-A-3-7.cmm
struct YMw3LLZGIER6Hc7C ;
float Kb7zQpoXTvDr ( || ) {
  while ( gkkiHG8Cx9p578S ~)   JjGgRJ &;

  if ( M7 )   Byv_53dZL8UXpEv $;
else   if ( [ H8kN1ewXEorIfGCM )   if ( K4IhMXVYKKn3S55or 
    ) >=   uAe36W7C2Ef ;



}
float ;
struct {
  struct {
  }KISdGiJQ9X1R2S ;`
}nk2onUh0KYJGlmLuuTCR ( struct p29609 mfjijhwh , int 
  ERPmn88cHRlCTf33P2TT @) {
}
int ;
* 